Feat: parte de Back quase toda pronta. Falta relacionamento entre os bancos.

--- a/restau-fit-back/composer.json
+++ b/restau-fit-back/composer.json
@@ -6,12 +6,13 @@
     "type": "project",
     "require": {
         "php": "^8.0",
-        "laravel/lumen-framework": "^9.0"
+        "laravel/lumen-framework": "^9.0",
+        "tymon/jwt-auth": "dev-develop"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.4.4",
-        "phpunit/phpunit": "^9.5.10"
+        "phpunit/phpunit": "9.5.21"
     },
     "autoload": {
         "psr-4": {
