--- a/restau-fit-front/package.json
+++ b/restau-fit-front/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
+    "js-cookie": "^3.0.1",
     "vue": "^2.7.0"
   },
   "devDependencies": {
